syntax = "proto3";

option go_package = "./pb";

package hausops.mono.services.auth;

import "google/protobuf/empty.proto";

service Auth {
  rpc SignUp(SignUpRequest) returns (google.protobuf.Empty);

  // rpc Login(LoginRequest) returns (LoginResponse);
  // rpc Logout(LogoutRequest) returns (LogoutResponse);
  // rpc CheckSession(CheckSessionRequest) returns (CheckSessionResponse);

  // ResetPassword

  // GetVerificationToken(Email) returns (VerificationToken);
  // SendVerificationEmail
  // ^ also handle resend

  // VerifyEmail(VerificationToken) returns (VerifyEmailResult);
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

// message LoginRequest {
//   string email = 1;
//   string password = 2;
// }

// message LoginResponse {
//   message Success { string access_token = 1; }
//   message UnverifiedEmail {}

//   oneof result {
//     Success success = 1;
//     UnverifiedEmail unverified_email = 2;
//   }
// }

// message LogoutRequest { string access_token = 1; }

// message LogoutResponse {}

// message CheckSessionRequest { string access_token = 1; }

// message CheckSessionResponse {
//   bool valid = 1;
//   string user_id = 2;
//   string email = 3;
// }

// message Account {
//   string email = 1;
//   bool verified = 2;
// }
